<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="learncode.example.com.dreamtrip.Activities.LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ic_backgroundimage"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20dp"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_50dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/user_name"


                    style="@style/Editext_LoginRegister"
                    android:gravity="start|left"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/under_line" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_20sp"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/user_password"
                    style="@style/Editext_LoginRegister"
                    android:gravity="start|left"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/under_line" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@color/sky_bule"
                android:text="@string/login_hint"

                android:textColor="@color/white" />


            <TextView
                android:id="@+id/register_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="10dp"

                android:text="@string/Signup"
                android:textColor="@color/white"
                android:textSize="14sp"

                />


        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
